--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.14.20",
     "@next/font": "14.0.4",
+    "@reduxjs/toolkit": "^2.0.1",
     "next": "14.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^9.0.3",
+    "redux": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
